Event show page style fixes, fix truncation, adjusted JS for the datetime on the cards

--- a/app/assets/stylesheets/pages/_event-show.scss
+++ b/app/assets/stylesheets/pages/_event-show.scss
@@ -87,29 +87,33 @@
     margin-right: 40px;
   }
   .attendees-card {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    padding: 30px;
     img {
       width: 100px;
     }
     .player-block {
-      flex-basis: auto;
-      margin: 15px 30px 15px 0;
+      margin: 0 0 30px 0;
+      border: solid 1px #DADADA;
+      padding-right: 15px;
     }
     .player-info {
       padding-right: 0;
       margin-right: 0;
+      overflow: hidden;
     }
     .progress {
       height: 10px;
       margin-top: 5px;
+      margin-bottom: 5px;
     }
   }
   .player-username {
     font-weight: 600;
     color: #205dcc;
     display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .player-level {
     text-transform: uppercase;
